chore: add TOC election results banner
Signed-off-by: Lance Ball <lball@redhat.com>

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -12,6 +12,10 @@
   Knative {{ config.extra.knative_version }} documentation is no longer actively maintained. The documentation you are currently viewing is a static snapshot. For up-to-date documentation, see <a href="{{ base_url }}/../docs/">the latest version</a>.
   </p>
 </div>
+{% else %}
+<div class="versionwarning" style="display: flex; justify-content: center;">
+  <p>Welcome new Technical Oversight Committee member <a href="https://github.com/kvmware">Krsna Mahapatra!</a></p>
+</div>
 {% endif %}
 {% endblock %}
 
