--- a/overrides/home.html
+++ b/overrides/home.html
@@ -155,7 +155,7 @@
         Eventing work together to automate and manage tasks and applications.
       </p>
       <div class="components-content">
-        <img class="components-img" src="../docs/images/home-images/knative_flowchart_graphic.svg" alt="" draggable="false" />
+        <img class="components-img" src="images/home-images/knative_flowchart_graphic.svg" alt="" draggable="false" />
         <div class="text-table">
           <p class="normal-text">
             Run serverless containers in Kubernetes with ease. Knative takes care of the details of networking,
