--- a/overrides/home.html
+++ b/overrides/home.html
@@ -316,9 +316,9 @@
         <div class="pane">
           <a href="https://twitter.com/KnativeProject" title="Twitter Link">
             <div class="twemoji">
-              {% include ".icons/fontawesome/brands/twitter.svg" %}
+              {% include ".icons/fontawesome/brands/x-twitter.svg" %}
             </div>
-            <h2>Follow us on Twitter</h2>
+            <h2>Follow us on Twitter / X</h2>
             <p class="normal-text">For feature announcements, interesting Knative news, and other great things.</p>
           </a>
         </div>
