--- a/overrides/home.html
+++ b/overrides/home.html
@@ -316,7 +316,7 @@
         <div class="pane">
           <a href="https://twitter.com/KnativeProject" title="Twitter Link">
             <div class="twemoji">
-              {% include ".icons/fontawesome/brands/x-twitter.svg" %}
+              <i class="fa-brands fa-x-twitter"></i>
             </div>
             <h2>Follow us on Twitter / X</h2>
             <p class="normal-text">For feature announcements, interesting Knative news, and other great things.</p>
