--- a/_index.html
+++ b/_index.html
@@ -110,7 +110,7 @@ title = "Knative"
 			</div>
 			<div class="col-sm-12 col-md-4 col-lg-3 text-center">
 				<div class="mb-4 h1">
-					<i class="fab fa-twitter"></i>
+					<i class="fa-brands fa-x-twitter"></i>
 				</div>
 				<h4>Follow us on Twitter</h4>
 				<p><a href="https://twitter.com/KnativeProject">
