Link to case studies
Signed-off-by: Ali Ok <aliok@redhat.com>

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -224,7 +224,9 @@
 
   <section class="case-studies-container">
     <div class="md-grid md-typeset">
-      <h1>Case Studies</h1>
+      <h1>
+        <a href="{{ 'about/case-studies/' | url }}">Case Studies</a>
+      </h1>
       <div class="cases-table">
         <div class="col">
           <a href="{{ 'about/case-studies/deepc/' | url }}">
