updated design for the 'adopters' logos

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -352,7 +352,9 @@
       { logoPath: "images/corporate-logos/spider.svg", url: "https://www.spider.com/" },
       { logoPath: "images/corporate-logos/tata_comm.svg", url: "https://www.tatacommunications.com/solutions/cloud/platforms" },
       { logoPath: "images/corporate-logos/vmware.svg", url: "https://network.tanzu.vmware.com/products/serverless" },
-      { logoPath: "images/corporate-logos/y_meadows.svg", url: "https://www.ymeadows.com/" }
+      { logoPath: "images/corporate-logos/y_meadows.svg", url: "https://www.ymeadows.com/" },
+      { logoPath: "images/corporate-logos/grerook.svg", url: "https://www.greyrook.com/" },
+      { logoPath: "images/corporate-logos/high_cohesion.svg", url: "https://www.highcohesion.com/" }
     ];
 
     function shuffle(array) {
