--- a/overrides/home.html
+++ b/overrides/home.html
@@ -354,7 +354,10 @@
       { logoPath: "images/corporate-logos/vmware.svg", url: "https://network.tanzu.vmware.com/products/serverless" },
       { logoPath: "images/corporate-logos/y_meadows.svg", url: "https://www.ymeadows.com/" },
       { logoPath: "images/corporate-logos/grerook.svg", url: "https://www.greyrook.com/" },
-      { logoPath: "images/corporate-logos/high_cohesion.svg", url: "https://www.highcohesion.com/" }
+      { logoPath: "images/corporate-logos/high_cohesion.svg", url: "https://www.highcohesion.com/" },
+      { logoPath: "images/corporate-logos/vhive.svg", url: "https://vhive-serverless.github.io/" },
+      { logoPath: "images/corporate-logos/sva.svg", url: "https://sva.de/en" },
+      { logoPath: "images/corporate-logos/vorteil-direktiv.svg", url: "https://www.direktiv.io/" }
     ];
 
     function shuffle(array) {
