--- a/overrides/home.html
+++ b/overrides/home.html
@@ -18,12 +18,12 @@
             <h3 class="trusted-by">Trusted by</h3>
             <div class="scroller">
               <div class="scroller__inner">
-                  <!-- First row of adopters will be populated dynamically -->
+                <!-- First row of adopters will be populated dynamically -->
               </div>
             </div>
             <div class="scroller" data-direction="right">
               <div class="scroller__inner">
-                  <!-- Second row of adopters will be populated dynamically -->
+                <!-- Second row of adopters will be populated dynamically -->
               </div>
             </div>
           </div>
@@ -311,11 +311,22 @@
         <div class="pane">
           <a href="https://twitter.com/KnativeProject" title="Twitter Link">
             <div class="twemoji">
-              <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><path d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"/></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
+                <path
+                  d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z" />
+              </svg>
             </div>
-            <h2>Follow us on Twitter / X</h2>
-            <p class="normal-text">For feature announcements, interesting Knative news, and other great things.</p>
           </a>
+          <a href="https://www.linkedin.com/company/knative" title="Linkedin Link">
+            <div class="twemoji">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -15 448 512">
+                <path
+                  d="M100.3 448H7.4V148.9h92.9zM53.8 108.1C24.1 108.1 0 83.5 0 53.8a53.8 53.8 0 0 1 107.6 0c0 29.7-24.1 54.3-53.8 54.3zM447.9 448h-92.7V302.4c0-34.7-.7-79.2-48.3-79.2-48.3 0-55.7 37.7-55.7 76.7V448h-92.8V148.9h89.1v40.8h1.3c12.4-23.5 42.7-48.3 87.9-48.3 94 0 111.3 61.9 111.3 142.3V448z" />
+              </svg>
+            </div>
+          </a>
+          <h2>Follow us</h2>
+          <p class="normal-text">For feature announcements, interesting Knative news, and other great things.</p>
         </div>
       </div>
     </div>
@@ -326,7 +337,7 @@
 {% block scripts %}
 {{ super() }}
 <script>
-  document.addEventListener("DOMContentLoaded", function() {
+  document.addEventListener("DOMContentLoaded", function () {
     // Suggested size for the logo images = 320x96
     const adopters = [
       { logoPath: "images/corporate-logos/alibaba_cloud.svg", url: "https://cs.console.aliyun.com/" },
