Homepage design issues fixed

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -10,10 +10,10 @@
             Knative is an Open-Source Enterprise-level<br>
             solution to build Serverless and Event Driven Applications
           </h1>
-          <p style="display: block">
-            <a href="{{ 'getting-started/' | url }}" class="md-button white md-button--primary">Try the tutorial</a>
-            <a href="{{ 'install/' | url }}" class="md-button white">Install Knative on your cluster</a>
-          </p>
+          <div style="margin-top: 1rem;">
+            <a href="{{ 'getting-started/' | url }}" class="md-button white md-button--primary cta-1">Try the tutorial</a>
+            <a href="{{ 'install/' | url }}" class="md-button white cta-2">Install Knative on your cluster</a>
+          </div>
           <div class="trusted-by-container">
             <h3 class="trusted-by">Trusted by</h3>
             <div class="scroller">
@@ -176,8 +176,7 @@
             <div class="reason-text">
               <h2>Developers focus on code</h2>
               <p class="normal-text">
-                From container to URL<br>
-                with less YAML config
+                From container to URL with less YAML config
               </p>
             </div>
           </div>
@@ -189,8 +188,7 @@
             <div class="reason-text">
               <h2>Scale up and down</h2>
               <p class="normal-text">
-                Scale down to zero<br>
-                based on traffic patterns
+                Scale down to zero based on traffic patterns
               </p>
             </div>
           </div>
@@ -202,8 +200,7 @@
             <div class="reason-text">
               <h2>Cloud agnostic</h2>
               <p class="normal-text">
-                Control traffic shifting<br>
-                for smoother rollouts
+                Control traffic shifting for smoother rollouts
               </p>
             </div>
           </div>
@@ -273,7 +270,7 @@
               functional."<br><br>
 
               —Noah Fontes,<br>
-              Senior Principal Software Engineer for<br>Puppet
+              Senior Principal Software Engineer for Puppet
             </p>
           </a>
         </div>
