Add new CNCF case study to Knative website

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -237,6 +237,20 @@
           </a>
         </div>
         <div class="col">
+          <a href="{{ 'about/case-studies/ibm/' | url }}">
+            <div class="logo">
+              <img class="ibm" src="images/case-studies/ibm.png" alt="IBM logo" draggable="false" width="75" />
+            </div>
+            <hr>
+            <p class="normal-text">
+              "The introduction of the ML training infrastructure using Knative Eventing 
+              has enabled us to establish a well-defined operational boundary for the service teams."<br><br>
+
+              —IBM
+            </p>
+          </a>
+        </div>
+        <div class="col">
           <a href="{{ 'about/case-studies/outfit7/' | url }}">
             <div class="logo">
               <img class="outfit7" src="images/case-studies/outfit7.png" alt="" draggable="false" />
