Apply suggested changes

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -244,9 +244,7 @@
             <hr>
             <p class="normal-text">
               "The introduction of the ML training infrastructure using Knative Eventing 
-              has enabled us to establish a well-defined operational boundary for the service teams."<br><br>
-
-              —IBM
+              has enabled us to establish a well-defined operational boundary for the service teams."<br>
             </p>
           </a>
         </div>
