--- a/overrides/home.html
+++ b/overrides/home.html
@@ -222,58 +222,38 @@
       </h1>
       <div class="cases-table">
         <div class="col">
-          <a href="{{ 'about/case-studies/deepc/' | url }}">
+          <a href="{{ 'about/case-studies/sva/' | url }}">
             <div class="logo">
-              <img class="deepc" src="images/case-studies/deepc.png" alt="" draggable="false" />
+              <img class="sva" src="images/case-studies/sva.png" alt="" draggable="false" />
             </div>
             <hr>
             <p class="normal-text">
-              "It should be possible for
-              somebody with an algorithm to have it on the platform in an hour"<br><br>
-
-              —Andrew Webber,<br>
-              Senior Software Engineer for deepc
+              "Knative allowed the team to centralize their system, scale, audit, and 
+              even select events while enforcing policies and simplifying the architecture"<br>
             </p>
           </a>
         </div>
         <div class="col">
-          <a href="{{ 'about/case-studies/outfit7/' | url }}">
+          <a href="{{ 'about/case-studies/ibm/' | url }}">
             <div class="logo">
-              <img class="outfit7" src="images/case-studies/outfit7.png" alt="" draggable="false" />
+              <img class="ibm" src="images/case-studies/ibm.png" alt="IBM logo" draggable="false" width="75" />
             </div>
             <hr>
             <p class="normal-text">
-              "The community support is
-              really great. The hands-on
-              experience with Knative was
-              so impressive. On the Slack
-              channel, we got actual
-              engineers to answer our questions"<br><br>
-
-              —Tilen Kavcic,<br>
-              Software Engineer for Outfit7
+              "The introduction of the ML training infrastructure using Knative Eventing 
+              has enabled us to establish a well-defined operational boundary for the service teams."<br>
             </p>
           </a>
         </div>
         <div class="col">
-          <a href="{{ 'about/case-studies/puppet/' | url }}">
+          <a href="{{ 'about/case-studies/pnc/' | url }}">
             <div class="logo">
-              <img class="puppet" src="images/case-studies/puppet.png" alt="" draggable="false" />
+              <img class="pnc" src="images/case-studies/pnc_bank.png" alt="" draggable="false" />
             </div>
             <hr>
             <p class="normal-text">
-              "I'm a strong believer in
-              working with open-source
-              vendors. We've made
-              contributions to numerous
-              projects, including Tekton,
-              Knative, Ambassador, and
-              gVisor --All of which we depend
-              on to make our product
-              functional."<br><br>
-
-              —Noah Fontes,<br>
-              Senior Principal Software Engineer for<br>Puppet
+              "The power of Knative’s eventing and serverless features allows PNC to bridge processes 
+              between Apache Kafka and CI/CD toolchain events and achieve this automated state."<br>
             </p>
           </a>
         </div>
