add deepc case study

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -222,6 +222,21 @@
       </h1>
       <div class="cases-table">
         <div class="col">
+          <a href="{{ 'about/case-studies/deepc/' | url }}">
+            <div class="logo">
+              <img class="deepc" src="images/case-studies/deepc.png" alt="" draggable="false" />
+            </div>
+            <hr>
+            <p class="normal-text">
+              "It should be possible for
+              somebody with an algorithm to have it on the platform in an hour"<br><br>
+
+              —Andrew Webber,<br>
+              Senior Software Engineer for deepc
+            </p>
+          </a>
+        </div>
+        <div class="col">
           <a href="{{ 'about/case-studies/sva/' | url }}">
             <div class="logo">
               <img class="sva" src="images/case-studies/sva.png" alt="" draggable="false" />
