comment for now

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -221,7 +221,7 @@
         <a href="{{ 'about/case-studies/' | url }}">Case Studies</a>
       </h1>
       <div class="cases-table">
-        <div class="col">
+<!--         <div class="col">
           <a href="{{ 'about/case-studies/deepc/' | url }}">
             <div class="logo">
               <img class="deepc" src="images/case-studies/deepc.png" alt="" draggable="false" />
@@ -235,7 +235,7 @@
               Senior Software Engineer for deepc
             </p>
           </a>
-        </div>
+        </div> -->
         <div class="col">
           <a href="{{ 'about/case-studies/sva/' | url }}">
             <div class="logo">
