--- a/overrides/home.html
+++ b/overrides/home.html
@@ -11,14 +11,8 @@
             solution to build Serverless and Event Driven Applications
           </h1>
           <p style="display: block">
-            <a
-              href="{{ 'getting-started/' | url }}"
-              class="md-button white md-button--primary"
-              >Try the tutorial</a
-            >
-            <a href="{{ 'install/' | url }}" class="md-button white"
-              >Install Knative on your cluster</a
-            >
+            <a href="{{ 'getting-started/' | url }}" class="md-button white md-button--primary">Try the tutorial</a>
+            <a href="{{ 'install/' | url }}" class="md-button white">Install Knative on your cluster</a>
           </p>
           <div class="trusted-by-container">
             <h3 class="trusted-by">Trusted by</h3>
@@ -65,13 +59,9 @@
         <div class="img-row">
           <div class="img-col">
             <div class="reason-img">
-              <img
-                src="images/home-images/blue_simple_abstractions_icon.svg"
+              <img src="images/home-images/blue_simple_abstractions_icon.svg"
                 onmouseover="this.src='images/home-images/dkblue_simple_abstractions_icon.svg'"
-                onmouseout="this.src='images/home-images/blue_simple_abstractions_icon.svg'"
-                alt=""
-                draggable="false"
-              />
+                onmouseout="this.src='images/home-images/blue_simple_abstractions_icon.svg'" alt="" draggable="false" />
             </div>
             <div class="reason-text">
               <h2>Simpler Abstractions</h2>
@@ -80,13 +70,9 @@
           </div>
           <div class="img-col">
             <div class="reason-img">
-              <img
-                src="images/home-images/blue_autoscaling_icon.svg"
+              <img src="images/home-images/blue_autoscaling_icon.svg"
                 onmouseover="this.src='images/home-images/dkblue_autoscaling_icon.svg'"
-                onmouseout="this.src='images/home-images/blue_autoscaling_icon.svg'"
-                alt=""
-                draggable="false"
-              />
+                onmouseout="this.src='images/home-images/blue_autoscaling_icon.svg'" alt="" draggable="false" />
             </div>
             <div class="reason-text">
               <h2>Autoscaling</h2>
@@ -95,13 +81,10 @@
           </div>
           <div class="img-col">
             <div class="reason-img">
-              <img
-                src="images/home-images/blue_progressive_rollouts_icon.svg"
+              <img src="images/home-images/blue_progressive_rollouts_icon.svg"
                 onmouseover="this.src='images/home-images/dkblue_progressive_rollouts_icon.svg'"
-                onmouseout="this.src='images/home-images/blue_progressive_rollouts_icon.svg'"
-                alt=""
-                draggable="false"
-              />
+                onmouseout="this.src='images/home-images/blue_progressive_rollouts_icon.svg'" alt=""
+                draggable="false" />
             </div>
             <div class="reason-text">
               <h2>Progressive Rollouts</h2>
@@ -114,13 +97,9 @@
         <div class="img-row">
           <div class="img-col">
             <div class="reason-img">
-              <img
-                src="images/home-images/blue_event_intergrations_icon.svg"
+              <img src="images/home-images/blue_event_intergrations_icon.svg"
                 onmouseover="this.src='images/home-images/dkblue_event_intergrations_icon.svg'"
-                onmouseout="this.src='images/home-images/blue_event_intergrations_icon.svg'"
-                alt=""
-                draggable="false"
-              />
+                onmouseout="this.src='images/home-images/blue_event_intergrations_icon.svg'" alt="" draggable="false" />
             </div>
             <div class="reason-text">
               <h2>Event Integrations</h2>
@@ -129,13 +108,9 @@
           </div>
           <div class="img-col">
             <div class="reason-img">
-              <img
-                src="images/home-images/blue_handle_events_icon.svg"
+              <img src="images/home-images/blue_handle_events_icon.svg"
                 onmouseover="this.src='images/home-images/dkblue_handle_events_icon.svg'"
-                onmouseout="this.src='images/home-images/blue_handle_events_icon.svg'"
-                alt=""
-                draggable="false"
-              />
+                onmouseout="this.src='images/home-images/blue_handle_events_icon.svg'" alt="" draggable="false" />
             </div>
             <div class="reason-text">
               <h2>Handle Events</h2>
@@ -144,13 +119,9 @@
           </div>
           <div class="img-col">
             <div class="reason-img">
-              <img
-                src="images/home-images/blue_plugable_icon.svg"
+              <img src="images/home-images/blue_plugable_icon.svg"
                 onmouseover="this.src='images/home-images/dkblue_plugable_icon.svg'"
-                onmouseout="this.src='images/home-images/blue_plugable_icon.svg'"
-                alt=""
-                draggable="false"
-              />
+                onmouseout="this.src='images/home-images/blue_plugable_icon.svg'" alt="" draggable="false" />
             </div>
             <div class="reason-text">
               <h2>Plugable</h2>
@@ -173,12 +144,7 @@
         Eventing work together to automate and manage tasks and applications.
       </p>
       <div class="components-content">
-        <img
-          class="components-img"
-          src="images/home-images/knative_flowchart_graphic.svg"
-          alt=""
-          draggable="false"
-        />
+        <img class="components-img" src="images/home-images/knative_flowchart_graphic.svg" alt="" draggable="false" />
         <div class="text-table">
           <p class="normal-text">
             Run serverless containers in Kubernetes with ease. Knative takes
@@ -203,11 +169,7 @@
         <div class="img-row">
           <div class="img-col">
             <div class="reason-img">
-              <img
-                src="images/home-images/dev_focus_code_icon.svg"
-                alt=""
-                draggable="false"
-              />
+              <img src="images/home-images/dev_focus_code_icon.svg" alt="" draggable="false" />
             </div>
             <div class="reason-text">
               <h2>Developers focus on code</h2>
@@ -220,11 +182,7 @@
 
           <div class="img-col">
             <div class="reason-img">
-              <img
-                src="images/home-images/dkblue_scale_icon.svg"
-                alt=""
-                draggable="false"
-              />
+              <img src="images/home-images/dkblue_scale_icon.svg" alt="" draggable="false" />
             </div>
             <div class="reason-text">
               <h2>Scale up and down</h2>
@@ -237,11 +195,7 @@
 
           <div class="img-col">
             <div class="reason-img">
-              <img
-                src="images/home-images/cloud_agnostic_icon.svg"
-                alt=""
-                draggable="false"
-              />
+              <img src="images/home-images/cloud_agnostic_icon.svg" alt="" draggable="false" />
             </div>
             <div class="reason-text">
               <h2>Cloud agnostic</h2>
@@ -268,15 +222,10 @@
         <button class="prev" onclick="changeSlide(-1)">&#10094;</button>
         <div class="cases-table">
           <div class="col">
-            <a href="{{ 'about/case-studies/deepc/' | url }}">
-              <div class="card">
+            <div class="card">
+              <a href="{{ 'about/case-studies/deepc/' | url }}">
                 <div class="logo">
-                  <img
-                    class="deepc"
-                    src="images/case-studies/deepc.png"
-                    alt=""
-                    draggable="false"
-                  />
+                  <img class="deepc" src="images/case-studies/deepc.png" alt="" draggable="false" />
                 </div>
                 <hr />
                 <p class="normal-text">
@@ -286,19 +235,14 @@
                   —Andrew Webber,<br />
                   Senior Software Engineer for deepc
                 </p>
-              </div>
-            </a>
+              </a>
+            </div>
           </div>
           <div class="col">
-            <a href="{{ 'about/case-studies/outfit7/' | url }}">
-              <div class="card">
+            <div class="card">
+              <a href="{{ 'about/case-studies/outfit7/' | url }}">
                 <div class="logo">
-                  <img
-                    class="outfit7"
-                    src="images/case-studies/outfit7.png"
-                    alt=""
-                    draggable="false"
-                  />
+                  <img class="outfit7" src="images/case-studies/outfit7.png" alt="" draggable="false" />
                 </div>
                 <hr />
                 <p class="normal-text">
@@ -309,19 +253,14 @@
                   —Tilen Kavcic,<br />
                   Software Engineer for Outfit7
                 </p>
-              </div>
-            </a>
+              </a>
+            </div>
           </div>
           <div class="col">
-            <a href="{{ 'about/case-studies/puppet/' | url }}">
-              <div class="card">
+            <div class="card">
+              <a href="{{ 'about/case-studies/puppet/' | url }}">
                 <div class="logo">
-                  <img
-                    class="puppet"
-                    src="images/case-studies/puppet.png"
-                    alt=""
-                    draggable="false"
-                  />
+                  <img class="puppet" src="images/case-studies/puppet.png" alt="" draggable="false" />
                 </div>
                 <hr />
                 <p class="normal-text">
@@ -332,8 +271,8 @@
                   —Noah Fontes,<br />
                   Senior Principal Software Engineer for<br />Puppet
                 </p>
-              </div>
-            </a>
+              </a>
+            </div>
           </div>
         </div>
         <button class="next" onclick="changeSlide(1)">&#10095;</button>
@@ -347,12 +286,7 @@
       <a href="https://www.cncf.io/">Cloud Native Computing Foundation</a>
       incubation project
     </h3>
-    <img
-      class="cncf-logo"
-      src="images/home-images/cncf-color.png"
-      alt=""
-      draggable="false"
-    />
+    <img class="cncf-logo" src="images/home-images/cncf-color.png" alt="" draggable="false" />
   </section>
 
   <section class="whats-next-container">
@@ -372,10 +306,7 @@
           </a>
         </div>
         <div class="pane">
-          <a
-            href="{{ 'community/contributing' | url }}"
-            title="Contributing Link"
-          >
+          <a href="{{ 'community/contributing' | url }}" title="Contributing Link">
             <div class="twemoji">
               {% include ".icons/fontawesome/brands/github.svg" %}
             </div>
@@ -388,14 +319,9 @@
         <div class="pane">
           <a href="https://twitter.com/KnativeProject" title="Twitter Link">
             <div class="twemoji">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                height="1em"
-                viewBox="0 0 512 512"
-              >
+              <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
                 <path
-                  d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"
-                />
+                  d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z" />
               </svg>
             </div>
             <h2>Follow us on Twitter / X</h2>
