update try the tutorial link on the home page

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -11,7 +11,7 @@
             solution to build Serverless and Event Driven Applications
           </h1>
           <p style="display: block">
-            <a href="{{ 'getting-started/' | url }}" class="md-button white md-button--primary">Try the tutorial</a>
+            <a href="{{ 'getting-started/tutorial' | url }}" class="md-button white md-button--primary">Try the tutorial</a>
             <a href="{{ 'install/' | url }}" class="md-button white">Install Knative on your cluster</a>
           </p>
           <div class="trusted-by-container">
