--- a/overrides/home.html
+++ b/overrides/home.html
@@ -48,7 +48,7 @@
   <section class="why-serverless-container">
     <div class="md-grid md-typeset">
       <h1>Why serverless containers?</h1>
-      <p class="normal-text">
+      <p class="normal-text-head">
         Serverless refers to running back-end programs and processes in the cloud. Serverless works on an as-used basis,
         meaning that companies only use what they pay for. Knative is a platform-agnostic
         solution for running serverless deployments.
@@ -57,9 +57,11 @@
         <div class="img-row">
           <div class="img-col">
             <div class="reason-img">
-              <img src="images/home-images/blue_simple_abstractions_icon.svg"
-                onmouseover="this.src='images/home-images/dkblue_simple_abstractions_icon.svg'"
-                onmouseout="this.src='images/home-images/blue_simple_abstractions_icon.svg'" alt="" draggable="false">
+              <div class="img-wrapper">
+                <img src="images/home-images/blue_simple_abstractions_icon.svg"
+                  onmouseover="this.src='images/home-images/dkblue_simple_abstractions_icon.svg'"
+                  onmouseout="this.src='images/home-images/blue_simple_abstractions_icon.svg'" alt="" draggable="false">
+              </div>
             </div>
             <div class="reason-text">
               <h2>Simpler Abstractions</h2>
@@ -70,9 +72,11 @@
           </div>
           <div class="img-col">
             <div class="reason-img">
-              <img src="images/home-images/blue_autoscaling_icon.svg"
-                onmouseover="this.src='images/home-images/dkblue_autoscaling_icon.svg'"
-                onmouseout="this.src='images/home-images/blue_autoscaling_icon.svg'" alt="" draggable="false">
+              <div class="img-wrapper">
+                <img src="images/home-images/blue_autoscaling_icon.svg"
+                  onmouseover="this.src='images/home-images/dkblue_autoscaling_icon.svg'"
+                  onmouseout="this.src='images/home-images/blue_autoscaling_icon.svg'" alt="" draggable="false">
+              </div>
             </div>
             <div class="reason-text">
               <h2>Autoscaling</h2>
@@ -83,9 +87,11 @@
           </div>
           <div class="img-col">
             <div class="reason-img">
-              <img src="images/home-images/blue_progressive_rollouts_icon.svg"
-                onmouseover="this.src='images/home-images/dkblue_progressive_rollouts_icon.svg'"
-                onmouseout="this.src='images/home-images/blue_progressive_rollouts_icon.svg'" alt="" draggable="false">
+              <div class="img-wrapper">
+                <img src="images/home-images/blue_progressive_rollouts_icon.svg"
+                  onmouseover="this.src='images/home-images/dkblue_progressive_rollouts_icon.svg'"
+                  onmouseout="this.src='images/home-images/blue_progressive_rollouts_icon.svg'" alt="" draggable="false">
+              </div>
             </div>
             <div class="reason-text">
               <h2>Progressive Rollouts</h2>
@@ -98,9 +104,11 @@
         <div class="img-row">
           <div class="img-col">
             <div class="reason-img">
-              <img src="images/home-images/blue_event_intergrations_icon.svg"
-                onmouseover="this.src='images/home-images/dkblue_event_intergrations_icon.svg'"
-                onmouseout="this.src='images/home-images/blue_event_intergrations_icon.svg'" alt="" draggable="false">
+              <div class="img-wrapper">
+                <img src="images/home-images/blue_event_intergrations_icon.svg"
+                  onmouseover="this.src='images/home-images/dkblue_event_intergrations_icon.svg'"
+                  onmouseout="this.src='images/home-images/blue_event_intergrations_icon.svg'" alt="" draggable="false">
+              </div>
             </div>
             <div class="reason-text">
               <h2>Event Integrations</h2>
@@ -111,9 +119,11 @@
           </div>
           <div class="img-col">
             <div class="reason-img">
-              <img src="images/home-images/blue_handle_events_icon.svg"
-                onmouseover="this.src='images/home-images/dkblue_handle_events_icon.svg'"
-                onmouseout="this.src='images/home-images/blue_handle_events_icon.svg'" alt="" draggable="false">
+              <div class="img-wrapper">
+                <img src="images/home-images/blue_handle_events_icon.svg"
+                  onmouseover="this.src='images/home-images/dkblue_handle_events_icon.svg'"
+                  onmouseout="this.src='images/home-images/blue_handle_events_icon.svg'" alt="" draggable="false">
+              </div>
             </div>
             <div class="reason-text">
               <h2>Handle Events</h2>
@@ -124,9 +134,11 @@
           </div>
           <div class="img-col">
             <div class="reason-img">
-              <img src="images/home-images/blue_plugable_icon.svg"
-                onmouseover="this.src='images/home-images/dkblue_plugable_icon.svg'"
-                onmouseout="this.src='images/home-images/blue_plugable_icon.svg'" alt="" draggable="false">
+              <div class="img-wrapper">
+                <img src="images/home-images/blue_plugable_icon.svg"
+                  onmouseover="this.src='images/home-images/dkblue_plugable_icon.svg'"
+                  onmouseout="this.src='images/home-images/blue_plugable_icon.svg'" alt="" draggable="false">
+              </div>
             </div>
             <div class="reason-text">
               <h2>Plugable</h2>
@@ -139,7 +151,7 @@
       </div>
     </div>
   </section>
-
+  
   <section class="knative-components-container">
     <div class="md-grid md-typeset">
       <h1>Knative Components</h1>
